--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,33 @@
 body {
   background: blanchedalmond;
+  text-align: center;
+  font: 5em;
+}
+ .container{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+ }
+.a{
+  flex-grow: 1;
+}
+.b{
+  flex-grow: 3;
+  min-height: 65vh;
+}
+.c{
+  flex-grow: 1;
+}
+
+@media(min-width:600px){
+  .container{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .a{
+    width: 100vw;
+  }
+  .b{
+    width:60vw;
+  }
 }
